// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleList onSelect is called when anchor item is selected 1`] = `
<SimpleList
  className=""
  isControlled={true}
  onSelect={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "current": <a
              class="pf-c-simple-list__item-link pf-m-current"
              href=""
              tabindex="0"
            >
              Item 1
            </a>,
          },
          Object {
            "children": "Item 1",
            "className": "",
            "component": "a",
            "componentClassName": "",
            "href": "",
            "isActive": false,
            "isCurrent": false,
            "onClick": [Function],
            "type": "button",
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <div
    className="pf-c-simple-list"
  >
    <ul>
      <SimpleListItem
        className=""
        component="a"
        componentClassName=""
        href=""
        isActive={false}
        isCurrent={false}
        key="i1"
        onClick={[Function]}
        type="button"
      >
        <li
          className=""
        >
          <a
            className="pf-c-simple-list__item-link pf-m-current"
            href=""
            onClick={[Function]}
            tabIndex={0}
          >
            Item 1
          </a>
        </li>
      </SimpleListItem>
      <SimpleListItem
        className=""
        component="a"
        componentClassName=""
        href=""
        isActive={false}
        isCurrent={false}
        key="i2"
        onClick={[Function]}
        type="button"
      >
        <li
          className=""
        >
          <a
            className="pf-c-simple-list__item-link"
            href=""
            onClick={[Function]}
            tabIndex={0}
          >
            Item 2
          </a>
        </li>
      </SimpleListItem>
      <SimpleListItem
        className=""
        component="a"
        componentClassName=""
        href=""
        isActive={false}
        isCurrent={false}
        key="i3"
        onClick={[Function]}
        type="button"
      >
        <li
          className=""
        >
          <a
            className="pf-c-simple-list__item-link"
            href=""
            onClick={[Function]}
            tabIndex={0}
          >
            Item 3
          </a>
        </li>
      </SimpleListItem>
    </ul>
  </div>
</SimpleList>
`;

exports[`SimpleList onSelect is called when item is selected 1`] = `
<SimpleList
  className=""
  isControlled={true}
  onSelect={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "current": <button
              class="pf-c-simple-list__item-link pf-m-current"
              type="button"
            >
              Item 1
            </button>,
          },
          Object {
            "children": "Item 1",
            "className": "",
            "component": "button",
            "componentClassName": "",
            "href": "",
            "isActive": false,
            "isCurrent": false,
            "onClick": [Function],
            "type": "button",
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <div
    className="pf-c-simple-list"
  >
    <ul>
      <SimpleListItem
        className=""
        component="button"
        componentClassName=""
        href=""
        isActive={false}
        isCurrent={false}
        key="i1"
        onClick={[Function]}
        type="button"
      >
        <li
          className=""
        >
          <button
            className="pf-c-simple-list__item-link pf-m-current"
            onClick={[Function]}
            type="button"
          >
            Item 1
          </button>
        </li>
      </SimpleListItem>
      <SimpleListItem
        className=""
        component="button"
        componentClassName=""
        href=""
        isActive={false}
        isCurrent={false}
        key="i2"
        onClick={[Function]}
        type="button"
      >
        <li
          className=""
        >
          <button
            className="pf-c-simple-list__item-link"
            onClick={[Function]}
            type="button"
          >
            Item 2
          </button>
        </li>
      </SimpleListItem>
      <SimpleListItem
        className=""
        component="button"
        componentClassName=""
        href=""
        isActive={false}
        isCurrent={false}
        key="i3"
        onClick={[Function]}
        type="button"
      >
        <li
          className=""
        >
          <button
            className="pf-c-simple-list__item-link"
            onClick={[Function]}
            type="button"
          >
            Item 3
          </button>
        </li>
      </SimpleListItem>
    </ul>
  </div>
</SimpleList>
`;

exports[`SimpleList renders anchor content 1`] = `
<div>
  <div
    class="pf-c-simple-list"
  >
    <ul>
      <li
        class=""
      >
        <a
          class="pf-c-simple-list__item-link"
          href=""
          tabindex="0"
        >
          Item 1
        </a>
      </li>
      <li
        class=""
      >
        <a
          class="pf-c-simple-list__item-link"
          href=""
          tabindex="0"
        >
          Item 2
        </a>
      </li>
      <li
        class=""
      >
        <a
          class="pf-c-simple-list__item-link"
          href=""
          tabindex="0"
        >
          Item 3
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`SimpleList renders content 1`] = `
<div>
  <div
    class="pf-c-simple-list"
  >
    <ul>
      <li
        class=""
      >
        <button
          class="pf-c-simple-list__item-link"
          type="button"
        >
          Item 1
        </button>
      </li>
      <li
        class=""
      >
        <button
          class="pf-c-simple-list__item-link"
          type="button"
        >
          Item 2
        </button>
      </li>
      <li
        class=""
      >
        <button
          class="pf-c-simple-list__item-link"
          type="button"
        >
          Item 3
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`SimpleList renders grouped content 1`] = `
<div>
  <div
    class="pf-c-simple-list"
  >
    <section
      class="pf-c-simple-list__section"
    >
      <h2
        aria-hidden="true"
        class="pf-c-simple-list__title"
        id=""
      >
        Group 1
      </h2>
      <ul
        aria-labelledby=""
        class=""
      >
        <li
          class=""
        >
          <button
            class="pf-c-simple-list__item-link"
            type="button"
          >
            Item 1
          </button>
        </li>
        <li
          class=""
        >
          <button
            class="pf-c-simple-list__item-link"
            type="button"
          >
            Item 2
          </button>
        </li>
        <li
          class=""
        >
          <button
            class="pf-c-simple-list__item-link"
            type="button"
          >
            Item 3
          </button>
        </li>
      </ul>
    </section>
  </div>
</div>
`;

exports[`SimpleListGroup renders content 1`] = `
<div>
  <section
    class="pf-c-simple-list__section"
  >
    <h2
      aria-hidden="true"
      class="pf-c-simple-list__title"
      id=""
    >
      Group 1
    </h2>
    <ul
      aria-labelledby=""
      class=""
    >
      <li
        class=""
      >
        <button
          class="pf-c-simple-list__item-link"
          type="button"
        >
          Item 1
        </button>
      </li>
      <li
        class=""
      >
        <button
          class="pf-c-simple-list__item-link"
          type="button"
        >
          Item 2
        </button>
      </li>
      <li
        class=""
      >
        <button
          class="pf-c-simple-list__item-link"
          type="button"
        >
          Item 3
        </button>
      </li>
    </ul>
  </section>
</div>
`;

exports[`SimpleListItem renders anchor 1`] = `
<div>
  <li
    class=""
  >
    <a
      class="pf-c-simple-list__item-link"
      href=""
      tabindex="0"
    >
      Item 1
    </a>
  </li>
</div>
`;

exports[`SimpleListItem renders content 1`] = `
<div>
  <li
    class=""
  >
    <button
      class="pf-c-simple-list__item-link"
      type="button"
    >
      Item 1
    </button>
  </li>
</div>
`;
